# GeneralsGameCode

./: .gitignore  CMakePresets.json  GeneratedSnapshotSchema.h  datachunk.md  linux.txt  linuxbad.txt  output.txt  runsnapshot.md  simulations.txt  snapshotobjects.md
.github/workflows/: check-simulation-crc.yml  ci.yml
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: CRCFloatQuantizer.h  CRCFrameLog.h  SimulationMatrixCrc.h  Xfer.h  XferCRC.h  XferDeepCRC.h  XferLoad.h  XferLoadBuffer.h  XferSave.h  XferSaveBuffer.h
Core/GameEngine/Source/Common/: CRCDebug.cpp  FramePacer.cpp  FrameRateLimit.cpp  SimulationMatrixCrc.cpp
Core/GameEngine/Source/Common/System/: Xfer.cpp  XferCRC.cpp  XferLoad.cpp  XferLoadBuffer.cpp  XferSave.cpp  XferSaveBuffer.cpp
Core/GameEngine/Source/GameNetwork/: Network.cpp
Core/Libraries/Source/WWVegas/WW3D2/: htree.cpp
Core/Libraries/Source/WWVegas/WWLib/: WWCommon.h
Core/Libraries/Source/WWVegas/WWMath/: matrix3d.cpp  matrix3d.h
Core/Tools/: CMakeLists.txt
Core/Tools/SnapshotTool/: CMakeLists.txt  Logic.cpp  Logic.h  UI.cpp  UI.h
Generals/Code/GameEngine/Include/Common/: Snapshot.h
Generals/Code/GameEngine/Include/GameLogic/: GameLogic.h
Generals/Code/GameEngine/Source/Common/: CommandLine.cpp  Recorder.cpp
Generals/Code/GameEngine/Source/Common/System/: StackDump.cpp
Generals/Code/GameEngine/Source/Common/System/SaveGame/: GameState.cpp
Generals/Code/GameEngine/Source/GameLogic/Object/: Object.cpp
Generals/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: Snapshot.h
GeneralsMD/Code/GameEngine/Include/GameClient/: GameClient.h
GeneralsMD/Code/GameEngine/Include/GameLogic/: AIStateMachine.h  GameLogic.h
GeneralsMD/Code/GameEngine/Include/GameLogic/Module/: DeployStyleAIUpdate.h
GeneralsMD/Code/GameEngine/Source/Common/: CommandLine.cpp  GlobalData.cpp  Recorder.cpp  SimulationMatrixCrc.cpp  version.cpp
GeneralsMD/Code/GameEngine/Source/Common/RTS/: Player.cpp  PlayerList.cpp
GeneralsMD/Code/GameEngine/Source/Common/System/: StackDump.cpp
GeneralsMD/Code/GameEngine/Source/Common/System/SaveGame/: GameState.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: GameClient.cpp  InGameUI.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/System/: ParticleSys.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/AI/: AI.cpp  AIGroup.cpp  AIPathfind.cpp  TurretAI.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/: ExperienceTracker.cpp  Object.cpp  PartitionManager.cpp  Weapon.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Behavior/: BattleBusSlowDeathBehavior.cpp  JetSlowDeathBehavior.cpp  SlowDeathBehavior.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Update/: EMPUpdate.cpp  HelicopterSlowDeathUpdate.cpp  NeutronMissileUpdate.cpp  PhysicsUpdate.cpp  SlavedUpdate.cpp  SpecialAbilityUpdate.cpp  StealthUpdate.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Update/AIUpdate/: DeployStyleAIUpdate.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/ScriptEngine/: ScriptEngine.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: dx8wrapper.cpp
GeneralsMD/Code/Tools/: CMakeLists.txt
GeneralsMD/Code/Tools/GameStatePipeWriter/: CMakeLists.txt  GeneratedSnapshotSchema.h  PipeWriterMain.cpp
GeneralsMD/Code/Tools/GameStateTool/: CMakeLists.txt  Logic.h  Main.cpp  ToolMain.cpp  UI.cpp  UI.h
GeneralsMD/Code/Tools/MatrixPrecisionTest/: CMakeLists.txt  main.cpp
GeneralsMD/Code/Tools/SnapshotTool/: CMakeLists.txt  Logic.cpp  Logic.h  Main.cpp  Pipe.cpp  Pipe.h  UI.cpp  UI.h
GeneralsMD/Code/Tools/SnapshotTool/Schemas/: GeneralsMDSchema.h
scripts/: compare_crc_frames.py  run-replay-proton.sh  run_replays.bat
scripts/cpp/: generate_snapshot_schema.py
